# sqapy

./: .gitignore  README.md  pyproject.toml  sqa.py
sqapy/: __init__.py  bipartite.py  sqa.py
