[tool.poetry]
name = "sqapy"
version = "0.1.0"
description = "Simulated quantum annealing implemented in Python"
authors = ["Hirofumi Tsuruta"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.0.1"
matplotlib = "^3.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
